Added DateMapper and virtual fields